2003-09-11  Bastien Nocera  <hadess@hadess.net>

	* libnautilus-private/nautilus-volume-monitor.c:
	(get_iso9660_volume_name_data_track_offset),
	(get_iso9660_volume_name): get the volume name correctly on CDs
	where the data track is not the first track (Linux only)

=== nautilus 2.4.0 ===

2003-09-08  Alexander Larsson  <alexl@redhat.com>

	* AUTHORS:
	* THANKS:
	* README: Updated for 2.4.0

2003-09-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 2.4.0

2003-09-05  Miguel Ibarra  <mibarra@ximian.com>

	* configure.in (HAVE_STARTUP_NOTIFICATION): If found,
	libstartup-notification is added to the extra core modules list.
	
2003-09-05  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c (migrate_old_nautilus_files):
	Don't migrate .gnome-desktop if its a symlink.

2003-09-05  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c (realized_callback):
	Hack to workaround messed up desktop icons.

2003-09-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libnautilus-private/nautilus-icon-factory.c:
	(nautilus_remove_icon_file_name_suffix):
	Handle xpm icons in .desktop correctly (mdk bug 4453)

2003-09-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libnautilus-private/.cvsignore: quiet CVS..

	* libnautilus-private/nautilus-file.c: (get_real_name):
	convert user real name to UTF-8 if needed (fix Mdk bug 4939)

=== nautilus 2.3.90 ===

2003-09-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 2.3.90

2003-09-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_invalidate_attributes_internal):
	Don't invalidate attributes for NautilusDesktopIconFiles, since
	they are always up to date (being in-memory objects). This fixes the
	problem where the trash and/or home icons became unusable with the default
	icon.

2003-08-29  Alexander Larsson  <alexl@redhat.com>

	* components/tree/nautilus-tree-view.c (theme_changed_callback):