@@ -1,3 +1,9 @@
+2003-09-11 Mathieu Lacage <mathieu@gnome.org>
+
+	* src/file-manager/fm-properties-window.c: add a wait cursor during
+	permission change. This is most useful when changing the permission
+	a big group of files.
+
 2003-09-11  Bastien Nocera  <hadess@hadess.net>
 
 	* libnautilus-private/nautilus-volume-monitor.c:
